CLEANFILES = */*~
DISTCLEANFILES =
MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = \
	analogy_device \
	comedi_device \
	comedilib_device \
	#ni_device \
	#system_control \
	#userprefs \
	#performance_measurement \
	#connector \
	#data_recorder \
	#oscilloscope \
	#dynamo_model_loader \
	#model_loader
