CLEANFILES = */*~
DISTCLEANFILES =
MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = \
	analogy_device \
	ni_device \
	performance_measurement \
	system_control \
	model_loader \
	comedi_device \
	comedilib_device 
#dynamo_model_loader #m
#data_recorder \ #m
#connector \ #t
#userprefs \ #t
#oscilloscope #wrf
