

bin_SCRIPTS = init_rtxi rtxi_comedi rtxi_plugin_config

CLEANFILES = *~ 
DISTCLEANFILES = init_rtxi rtxi_comedi rtxi_plugin_config



#
# $Id: Makefile.am,v 1.1 2006/02/19 20:10:10 ivan_raikov Exp $
#
# 
# $Log: Makefile.am,v $
# Revision 1.1  2006/02/19 20:10:10  ivan_raikov
# File added to repository.
#
#
#
